--- a/to-be-deleted.tex
+++ b/to-be-deleted.tex
@@ -90,14 +90,15 @@
 
 \title{BASiCS workflow: a step-by-step analysis of expression variability using single cell RNA sequencing data}
 
-\author[1,2]{Nils Eling\thanks{\ttfamily eling@ebi.ac.uk}}
-\author[3]{Alan O'Callaghan}
+\author[1,2,3]{Nils Eling}
+\author[4]{Alan O'Callaghan\thanks{\ttfamily a.b.o'callaghan@sms.ed.ac.uk}}
 \author[1,2]{John C. Marioni}
-\author[3,4]{Catalina A. Vallejos\thanks{\ttfamily catalina.vallejos@igmm.ed.ac.uk}}
+\author[4,5]{Catalina A. Vallejos\thanks{\ttfamily catalina.vallejos@igmm.ed.ac.uk}}
 \affil[1]{European Molecular Biology Laboratory, European Bioinformatics Institute, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, UK}
 \affil[2]{Cancer Research UK Cambridge Institute, University of Cambridge, Li Ka Shing Centre, Cambridge, CB2 0RE, UK}
-\affil[3]{MRC Human Genetics Unit, Institute of Genetics \& Molecular Medicine, University of Edinburgh, Western General Hospital, Crewe Road, Edinburgh, EH4 2XU, UK}
-\affil[4]{The Alan Turing Institute, British Library, 96 Euston Road, London, NW1 2DB, UK}
+\affil[3]{Department of Quantitative Biomedicine, University of Zurich, Winterthurerstrasse 190, CH-8057, Zurich, Switzerland}
+\affil[4]{MRC Human Genetics Unit, Institute of Genetics \& Molecular Medicine, University of Edinburgh, Western General Hospital, Crewe Road, Edinburgh, EH4 2XU, UK}
+\affil[5]{The Alan Turing Institute, British Library, 96 Euston Road, London, NW1 2DB, UK}
 
 \maketitle
 \thispagestyle{front}
@@ -137,30 +138,411 @@ Single-cell RNA sequencing, expression variability, transcriptional noise, diffe
 \clearpage
 \pagestyle{main}
 
+\hypertarget{introduction}{%
+\section{Introduction}\label{introduction}}
+
+Single-cell RNA-sequencing (scRNA-seq) enables the study of genome-wide
+transcriptional heterogeneity in cell populations that cannot be
+detected in bulk experiments \citep{Stegle2015, Prakadan2017, Patange2018}.
+On the broadest level, this heterogeneity can reflect the presence of distinct
+cell subtypes or states.
+Alternatively, it can be due to gradual changes along biological processes, such
+as development and differentiation.
+Several clustering and pseudotime inference methods have been developed to
+characterise these types of heterogeneity \citep{Kiselev2019, Saelens2019}.
+However, there is a limited availability of computational tools tailored
+to study more subtle variability within seemingly homogeneous cell populations.
+This variability can reflect deterministic or stochastic events that regulate
+gene expression and, among others, has been reported to increase prior to cell
+fate decisions \citep{Mojtahedi2016} as well as during ageing \citep{Martinez-jimenez2017}.
+
+This article complements existing scRNA-seq workflows based on the
+Bioconductor package ecosystem (e.g. \citep{Lun2016, Kim2019}).
+We describe a step-by-step analysis which uses \emph{\href{https://bioconductor.org/packages/3.11/scater}{scater}} and
+\emph{\href{https://bioconductor.org/packages/3.11/scran}{scran}} to perform quality control (QC) as well as
+initial exploratory analyses \citep{McCarthy2017, Lun2016}.
+To robustly quantify transcriptional variability we use \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} \citep{Vallejos2015, Vallejos2016, Eling2017} --- a Bayesian hierarchical framework
+that jointly performs data normalisation (global scaling), technical noise
+quantification and downstream analyses, whilst propagating statistical
+uncertainty across these steps.
+Among others, \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}}, has led to new insights about the
+heterogeneity of immune cells \citep{Martinez-jimenez2017}.
+
+Within a population of cells, \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} decomposes the total
+observed variability in expression measurements into technical and biological
+components \citep{Vallejos2015}.
+This enables the identification of \emph{highly variable genes} (HVGs) that capture
+the major sources of heterogeneity within the analysed cells \citep{Brennecke2013}.
+HVG detection is often used as feature selection, to identify the input
+set of genes for subsequent analyses.
+\emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} can also highlight \emph{lowly variable genes} (LVGs) that
+exhibit stable expression across the population of cells.
+These may relate to essential cellular functions and can assist the development
+of new data normalisation or integration strategies \citep{Lin2019}.
+
+\emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} also provides a probabilistic decision rule to
+perform differential expression analyses between two (or more) pre-specified
+groups of cells \citep{Vallejos2016, Eling2018}.
+Whilst several differential expression tools have been proposed for scRNA-seq
+data (e.g. \citep{Kharchenko2014, Finak2015}), some evidence suggests that
+these do not generally outperform popular bulk RNA-seq tools \citep{Soneson2018}.
+Moreover, most of these methods are only designed to uncover changes in overall
+expression, ignoring the more complex patterns that can arise at the single cell
+level \citep{Lahnemann2020}.
+Instead, \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} embraces the high granularity of scRNA-seq data,
+uncovering changes in cell-to-cell expression variability that are not
+confounded by differences in technical noise or in overall expression.
+
+Here, we briefly discuss the sources of variability that arise in scRNA-seq data
+and some of the strategies that have been designed to control or attenuate
+technical noise in these assays.
+We also summarise the main features of the Bioconductor packages used
+throughout this workflow, and provide a description for the underlying
+statistical model implemented in \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}}.
+This includes practical guidance to assess the convergence of the Markov Chain
+Monte Carlo (MCMC) algorithm that is used to infer model parameters as well as
+recommendations to interpret and post-process the model outputs.
+Finally, we provide a step-by-step case study.
+
+All source code used to generate the results presented in this article is
+available \href{https://github.com/VallejosGroup/BASiCSWorkflow}{on Github}.
+To ensure the
+reproducibility of this workflow, the analysis environment and all software
+dependencies are provided as a Docker image \citep{Boettiger2015}. The image
+can be obtained from
+\href{https://hub.docker.com/repository/docker/alanocallaghan/bocker}{Docker Hub}.
+
+\hypertarget{sources-of-variability-in-scrna-seq-data}{%
+\section{Sources of variability in scRNA-seq data}\label{sources-of-variability-in-scrna-seq-data}}
+
+The focus of this article is to quantify the magnitude of cell-to-cell
+expression heterogeneity within seemingly homogeneous cell populations.
+Here, we briefly describe the underlying sources of heterogeneity that can be
+captured by cell-to-cell variability estimates derived from scRNA-seq data.
+
+Stochastic variability within a cell population --- often referred to as
+transcriptional \emph{noise} --- can arise from intrinsic and extrinsic sources
+\citep{Elowitz2002, Eling2019}.
+Classically, extrinsic noise is defined as stochastic fluctuations induced by
+different dynamic cellular states (e.g.~cell cycle, metabolism, intra- and
+inter-cellular signalling)
+\citep{Zopf2013, Iwamoto2016, Kiviet2014}.
+In contrast, intrinsic noise arises from stochastic effects on biochemical
+processes such as transcription and translation \citep{Elowitz2002}.
+Intrinsic noise can be modulated by genetic and epigenetic modifications (such
+as mutations, histone modifications, CpG island length and nucleosome
+positioning) \citep{Eberwine2015, Faure2017, Morgan2018} and is usually measured
+at the gene level \citep{Elowitz2002}.
+Cell-to-cell gene expression variability estimates derived from scRNA-seq data
+capture a combination of these effects, as well as deterministic regulatory
+mechanisms \citep{Eling2019}.
+Moreover, these variability estimates can also be inflated by the technical
+noise that is typically observed in scRNA-seq data \citep{Brennecke2013}.
+
+Different strategies have been incorporated into scRNA-seq protocols to control
+or attenuate technical noise.
+For example, external RNA spike-in molecules (such as the set introduced by the
+External RNA Controls Consortium, ERCC \citep{Rna2005}) can be added to each cell's
+lysate in a (theoretically) known fixed quantity.
+Spike-ins can assist quality control steps \citep{McCarthy2017}, data normalisation
+\citep{Vallejos2017} and can be used to infer technical noise \citep{Brennecke2013}.
+Another strategy is to tag individual cDNA molecules using unique molecular
+identifiers (UMIs) before PCR amplification \citep{Islam2014}.
+Reads that contain the same UMI can be collapsed into a single molecule count,
+attenuating technical variability associated to cell-to-cell differences
+in amplification and sequencing depth (these technical biases are not fully
+removed unless sequencing to saturation \citep{Vallejos2017}).
+However, despite the benefits associated to the use of spike-ins and UMIs,
+these are not available for all scRNA-seq protocols \citep{Haque2017}.
+
+\hypertarget{methods}{%
+\section{Methods}\label{methods}}
+
+This step-by-step scRNA-seq workflow is primarily based on the Bioconductor
+package ecosystem \citep{Amezquita2019}.
+A graphical overview is provided in Figure \ref{fig:overview}
+and its main components are described below.
+
+\begin{figure}
+
+{\centering \includegraphics[width=2.5in,height=3.5in]{figure/Overview} 
+
+}
+
+\caption{Graphical overview for the scRNA-seq analysis workflow described in this manuscript. Starting from a matrix of expression counts, we use the scater and scran Bioconductor packages to perform QC and initial exploratory analyses. To robustly quantify transcriptional heterogeneity within seemingly homogeneous cell populations, we apply the BASiCS Bioconductor package and  illustrate how BASiCS can be used to analyse a single or multiple pre-specified groups of cells.}\label{fig:overview}
+\end{figure}
+
+\hypertarget{input-data}{%
+\subsection{Input data}\label{input-data}}
+
 \begin{Shaded}
 \begin{Highlighting}[]
-\KeywordTok{library}\NormalTok{(SingleCellExperiment)}
-\KeywordTok{library}\NormalTok{(scater)}
-\KeywordTok{library}\NormalTok{(scran)}
-\KeywordTok{library}\NormalTok{(BASiCS)}
+\KeywordTok{library}\NormalTok{(}\StringTok{"SingleCellExperiment"}\NormalTok{)}
 \end{Highlighting}
 \end{Shaded}
 
-\hypertarget{qc-and-exploratory-analysis}{%
-\subsection{QC and exploratory analysis}\label{qc-and-exploratory-analysis}}
+We use \emph{\href{https://bioconductor.org/packages/3.11/SingleCellExperiment}{SingleCellExperiment}} to convert an input
+matrix of raw read-counts (molecule counts for UMI-based protocols) into a
+\texttt{SingleCellExperiment} object which can also store its associated
+metadata, such as gene- and cell-specific information.
+Moreover, when available, the same object can also store read-counts for
+spike-in molecules (see \texttt{altExp()}).
+A major advantage of using a \texttt{SingleCellExperiment} object as the input for
+scRNA-seq analyses is the interoperability across a large number of
+Bioconductor packages \citep{Amezquita2019}.
 
-These QC metrics can also be visualised with respect to cell-level metadata.
-For example, the following figures show how these metrics relate to the
-experimental conditions (active vs unstimulated) and to the different mice
-from which cells were collected.
+\hypertarget{quality-control-and-exploratory-analysis}{%
+\subsection{Quality control and exploratory analysis}\label{quality-control-and-exploratory-analysis}}
 
-For this purpose, we apply a Principal Component Analysis (PCA) after \emph{\href{https://bioconductor.org/packages/3.11/scran}{scran}} normalisation.
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(}\StringTok{"scater"}\NormalTok{)}
+\KeywordTok{library}\NormalTok{(}\StringTok{"scran"}\NormalTok{)}
+\KeywordTok{library}\NormalTok{(}\StringTok{"ggplot2"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
 
-In the next step, we will use the and
-\emph{\href{https://bioconductor.org/packages/3.11/scater}{scater}} Bioconductor packages for initial normalisation and
-visualisation of quality metrics.
-The normalisation at this point is needed to avoid biases in the visualisation
-due to differences in the mRNA content between cells.
+An critical step in scRNA-seq analyses is to apply QC diagnostics, removing low
+quality samples that may distort downstream analyses.
+Among others, QC can help to identify samples that contain broken cells, that
+are empty or that contain multiple cells \citep{Ilicic2016}.
+Moreover, lowly expressed genes for which less reliable information is
+available are typically also removed.
+The \href{https://osca.bioconductor.org/}{\emph{OSCA}} online book provides an extensive
+overview on important aspects of how to perform QC of scRNA-seq data, including
+exploratory analyses \citep{Amezquita2019}.
+
+To perform QC, we use the \emph{\href{https://bioconductor.org/packages/3.11/scater}{scater}} package \citep{McCarthy2017}.
+The \texttt{addPerCellQC} and \texttt{addPerFeatureQC} functions are applied to calculate
+QC metrics for each cell (e.g.~total read-count) and gene (e.g.~percentage of
+zeroes across all cells), respectively.
+The package also provides a suite of visualisation tools that can be used to
+explore the data under study and its associated QC diagnostic metrics.
+
+The \emph{\href{https://bioconductor.org/packages/3.11/scran}{scran}} package offers additional tools for QC
+diagnostics and a variety of functions scRNA-seq data analysis \citep{Lun2016}.
+It can perform \emph{global scaling} normalisation, calculating cell-specific
+scaling factors that capture global differences in read-counts across cells
+(e.g.~due to sequencing depth and PCR amplification) \citep{Lun2016pooling}.
+To explore the strenght of transcriptional variability, we use the \texttt{modelGeneCV2}
+function to infer an overall trend between mean expression and the
+squared coefficent of variation (CV\textsuperscript{2}) for each gene.
+To derive gene-specific variability estimates that are not confounded by this
+overall trend, the \texttt{DM} function calculates the distance between CV\(^2\) and a
+rolling median along the range of mean expression values \citep{Kolodziejczyk2015cell}.
+DM estimates enable exploratory analyses of cell-to-cell heterogeneity, but a
+measure of uncertainty is not readily available. As such, gene-specific
+downstream inference (e.g.~differential variability testing) is precluded.
+
+Finally, we also load \emph{\href{https://CRAN.R-project.org/package=ggplot2}{ggplot2}} to visualise the results of these
+analyses.
+
+\hypertarget{analysis-of-cell-to-cell-transcriptional-variability}{%
+\subsection{Analysis of cell-to-cell transcriptional variability}\label{analysis-of-cell-to-cell-transcriptional-variability}}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(}\StringTok{"BASiCS"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+The \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} package uses a Bayesian hierarchical framework
+that borrows information across all genes and cells to robustly quantify
+transcriptional variability \citep{Vallejos2015BASiCS}.
+Similar to the approach adopted in \emph{\href{https://bioconductor.org/packages/3.11/scran}{scran}}, \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}}
+infers cell-specific global scaling normalisation parameters.
+However, instead of inferring these as a pre-processing step,
+\emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} uses an integrated approach in which data normalisation
+and downstream analyses are performed simultaneously, thereby propagating
+statistical uncertainty.
+To quantify technical noise, the original implementation of
+\emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} uses information from extrinsic spike-in molecules as
+control features, but the model has been extended to address situations in which
+spike-ins are not available \citep{Eling2018}.
+
+\emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} summarises expression patterns through
+gene-specific \emph{mean} (\(\mu_i\)) and \emph{over-dispersion} (\(\delta_i\)) parameters.
+Mean parameters \(\mu_i\) quantify the overall expression for each gene \(i\)
+across the population of cells under study.
+In contrast, \(\delta_i\) captures the excess of variability that is observed with
+respect to what would be expected in a homogeneous cell population, after
+taking into account technical noise.
+This is used as a proxy to quantify transcriptional variability.
+Moreover, to account for the strong association that is typically observed
+between mean expression and over-dispersion estimates, we recently introduced
+gene-specific \emph{residual over-dispersion} parameters \(\epsilon_i\) \citep{Eling2018}.
+Similar to DM values implemented in \emph{\href{https://bioconductor.org/packages/3.11/scran}{scran}}, these are defined as
+deviations with respect to an overall regression trend that captures the
+relationship between mean and over-dispersion values.
+
+Parameter inference is implemented in the \texttt{BASiCS\_MCMC} function using an
+adaptive Metropolis within Gibbs algorithm \citep{Roberts2009}, whose convergence can
+be assessed using the \texttt{BASiCS\_DiagHist} and \texttt{BASiCS\_DiagPlot} functions,
+among others.
+The output from \texttt{BASiCS\_MCMC} is a \texttt{BASiCS\_Chain} object, which can be used
+for further downstream analyses. In particular, \texttt{BASiCS\_DetectHVG} and
+\texttt{BASiCS\_DetectLVG} can be respectively used to identify highly and lowly
+variable genes within a cell population. Moreover, \texttt{BASiCS\_TestDE} is used to
+perform differential mean and variability analyses between groups of cells.
+
+\hypertarget{Tcells}{%
+\section{\texorpdfstring{Analysis of naive CD4\textsuperscript{+} T cells}{Analysis of naive CD4+ T cells}}\label{Tcells}}
+
+As a case study, we use scRNA-seq data generated for CD4\textsuperscript{+} T cells
+using the C1 Single-Cell Auto Prep System (Fluidigm\textsuperscript{®}).
+Martinez-Jimenez \emph{et al.} profiled naive (hereafter also referred to as
+\emph{unstimulated}) and activated (3 hours using \emph{in vitro} antibody stimulation)
+CD4\textsuperscript{+} T cells from young and old animals across two mouse strains to study
+changes in expression variability during ageing and upon immune activation
+\citep{Martinez-jimenez2017}.
+They extracted naive or effector memory CD4\textsuperscript{+} T cells from spleens of young or
+old animals, obtaining purified populations using either magnetic-activated cell
+sorting (MACS) or fluorescence activated cell sorting (FACS).
+External ERCC spike-in RNA \citep{Rna2005} was added to aid the quantification of
+technical variability across all cells and all experiments were performed in
+replicates (also referred to as batches) to control for batch effects.
+
+\hypertarget{obtaining-the-data}{%
+\subsection{Obtaining the data}\label{obtaining-the-data}}
+
+The matrix with raw read counts can be obtained from ArrayExpress under the
+accession number
+\href{https://www.ebi.ac.uk/arrayexpress/experiments/E-MTAB-4888/}{E-MTAB-4888}.
+In the matrix, column names contain library identifiers and row names
+display gene Ensembl identifiers.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\ControlFlowTok{if}\NormalTok{ (}\OperatorTok{!}\KeywordTok{file.exists}\NormalTok{(}\StringTok{"downloads/raw_data.txt"}\NormalTok{)) \{}
+  \CommentTok{# Download raw counts file}
+\NormalTok{  website <-}\StringTok{ "https://www.ebi.ac.uk/"}
+\NormalTok{  folder <-}\StringTok{ "arrayexpress/files/E-MTAB-4888/"}
+\NormalTok{  file <-}\StringTok{ "E-MTAB-4888.processed.1.zip"}
+\NormalTok{  destfile <-}\StringTok{ "downloads/raw_data.txt.zip"}
+  \KeywordTok{download.file}\NormalTok{(}
+    \KeywordTok{paste0}\NormalTok{(website, folder, file),}
+    \DataTypeTok{destfile =}\NormalTok{ destfile}
+\NormalTok{  )}
+  \KeywordTok{unzip}\NormalTok{(}\StringTok{"downloads/raw_data.txt.zip"}\NormalTok{, }\DataTypeTok{exdir =} \StringTok{"downloads"}\NormalTok{)}
+  \KeywordTok{file.remove}\NormalTok{(}\StringTok{"downloads/raw_data.txt.zip"}\NormalTok{)}
+\NormalTok{\}}
+
+\CommentTok{# Read in raw data}
+\NormalTok{CD4_raw <-}\StringTok{ }\KeywordTok{read.table}\NormalTok{(}\StringTok{"downloads/raw_data.txt"}\NormalTok{, }\DataTypeTok{header =} \OtherTok{TRUE}\NormalTok{, }\DataTypeTok{sep =} \StringTok{"}\CharTok{\textbackslash{}t}\StringTok{"}\NormalTok{)}
+\NormalTok{CD4_raw <-}\StringTok{ }\KeywordTok{as.matrix}\NormalTok{(CD4_raw)}
+\end{Highlighting}
+\end{Shaded}
+
+The input matrix contains data for 1,513
+cells and 31,181
+genes (including 92 ERCC spike-ins).
+Information about experimental conditions and batches is available in a metadata
+file under the same accession number.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\ControlFlowTok{if}\NormalTok{ (}\OperatorTok{!}\KeywordTok{file.exists}\NormalTok{(}\StringTok{"downloads/metadata_file.txt"}\NormalTok{)) \{}
+  \CommentTok{# Download raw counts file}
+\NormalTok{  website <-}\StringTok{ "https://www.ebi.ac.uk/"}
+\NormalTok{  folder <-}\StringTok{ "arrayexpress/files/E-MTAB-4888/"}
+\NormalTok{  file <-}\StringTok{ "E-MTAB-4888.additional.1.zip"}
+\NormalTok{  destfile <-}\StringTok{ "downloads/metadata.txt.zip"}
+  \KeywordTok{download.file}\NormalTok{(}
+    \KeywordTok{paste0}\NormalTok{(website, folder, file),}
+    \DataTypeTok{destfile =}\NormalTok{ destfile}
+\NormalTok{  )}
+  \KeywordTok{unzip}\NormalTok{(}\StringTok{"downloads/metadata.txt.zip"}\NormalTok{, }\DataTypeTok{exdir =} \StringTok{"downloads"}\NormalTok{)}
+  \KeywordTok{file.remove}\NormalTok{(}\StringTok{"downloads/metadata.txt.zip"}\NormalTok{)}
+\NormalTok{\}}
+\CommentTok{# Read in metadata file}
+\NormalTok{CD4_metadata <-}\StringTok{ }\KeywordTok{read.table}\NormalTok{(}
+  \StringTok{"downloads/metadata_file.txt"}\NormalTok{,}
+  \DataTypeTok{header =} \OtherTok{TRUE}\NormalTok{,}
+  \DataTypeTok{sep =} \StringTok{"}\CharTok{\textbackslash{}t}\StringTok{"}
+\NormalTok{)}
+
+\CommentTok{# Save library identifier as rownames}
+\KeywordTok{rownames}\NormalTok{(CD4_metadata) <-}\StringTok{ }\NormalTok{CD4_metadata}\OperatorTok{$}\NormalTok{X}
+
+\CommentTok{# Show metadata entries}
+\KeywordTok{names}\NormalTok{(CD4_metadata)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## [1] "X"           "Strain"      "Age"         "Stimulus"    "Individuals"
+## [6] "Celltype"
+\end{verbatim}
+
+The metadata contains library identifiers (\texttt{X}), strain information (\texttt{Strain};
+\emph{Mus musculus castaneus} or \emph{Mus musculus domesticus}), the age of the animals
+(\texttt{Age}; young or old), stimulation state of the cells (\texttt{Stimulus}; naive or
+activated), batch information (\texttt{Individuals}; associated to different mice),
+and cell type information (\texttt{Celltype}; via FACS or MACS purification).
+
+The data and metadata described above are then converted into a
+\emph{\href{https://bioconductor.org/packages/3.11/SingleCellExperiment}{SingleCellExperiment}} object.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{# Separate intrinsic from ERCC counts}
+\NormalTok{bio_counts <-}\StringTok{ }\NormalTok{CD4_raw[}\OperatorTok{!}\KeywordTok{grepl}\NormalTok{(}\StringTok{"ERCC"}\NormalTok{, }\KeywordTok{rownames}\NormalTok{(CD4_raw)), ]}
+\NormalTok{spike_counts <-}\StringTok{ }\NormalTok{CD4_raw[}\KeywordTok{grepl}\NormalTok{(}\StringTok{"ERCC"}\NormalTok{, }\KeywordTok{rownames}\NormalTok{(CD4_raw)), ]}
+\CommentTok{# Generate the SingleCellExperiment object}
+\NormalTok{sce_CD4_all <-}\StringTok{ }\KeywordTok{SingleCellExperiment}\NormalTok{(}
+  \DataTypeTok{assays =} \KeywordTok{list}\NormalTok{(}\DataTypeTok{counts =} \KeywordTok{as.matrix}\NormalTok{(bio_counts)),}
+  \DataTypeTok{colData =}\NormalTok{ CD4_metadata[}\KeywordTok{colnames}\NormalTok{(CD4_raw), ]}
+\NormalTok{)}
+\CommentTok{# Add read-counts for spike-ins }
+\KeywordTok{altExp}\NormalTok{(sce_CD4_all, }\StringTok{"spike-ins"}\NormalTok{) <-}\StringTok{ }\KeywordTok{SummarizedExperiment}\NormalTok{(}
+  \DataTypeTok{assays =} \KeywordTok{list}\NormalTok{(}\DataTypeTok{counts =}\NormalTok{ spike_counts)}
+\NormalTok{)}
+\NormalTok{sce_CD4_all}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## class: SingleCellExperiment 
+## dim: 31089 1513 
+## metadata(0):
+## assays(1): counts
+## rownames(31089): ENSMUSG00000000001 ENSMUSG00000000003 ...
+##   ENSMUSG00000106668 ENSMUSG00000106670
+## rowData names(0):
+## colnames(1513): do4737 do4739 ... do12254 do12257
+## colData names(6): X Strain ... Individuals Celltype
+## reducedDimNames(0):
+## altExpNames(1): spike-ins
+\end{verbatim}
+
+Throughout our analysis, we focus on naive and activated CD4\textsuperscript{+} T cells obtained
+from young \emph{Mus musculus domesticus} animals, purified using MACS-based cell sorting.
+The following code is used to extract these
+146 samples from the full dataset.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{ind_select <-}\StringTok{ }\NormalTok{sce_CD4_all}\OperatorTok{$}\NormalTok{Strain }\OperatorTok{==}\StringTok{ "Mus musculus domesticus"} \OperatorTok{&}
+\StringTok{  }\NormalTok{sce_CD4_all}\OperatorTok{$}\NormalTok{Age }\OperatorTok{==}\StringTok{ "Young"} \OperatorTok{&}
+\StringTok{  }\NormalTok{sce_CD4_all}\OperatorTok{$}\NormalTok{Celltype }\OperatorTok{==}\StringTok{ "MACS-purified Naive"}
+\NormalTok{sce_naive_active <-}\StringTok{ }\NormalTok{sce_CD4_all[, ind_select]}
+\NormalTok{sce_naive_active}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## class: SingleCellExperiment 
+## dim: 31089 146 
+## metadata(0):
+## assays(1): counts
+## rownames(31089): ENSMUSG00000000001 ENSMUSG00000000003 ...
+##   ENSMUSG00000106668 ENSMUSG00000106670
+## rowData names(0):
+## colnames(146): do6113 do6118 ... do6493 do6495
+## colData names(6): X Strain ... Individuals Celltype
+## reducedDimNames(0):
+## altExpNames(1): spike-ins
+\end{verbatim}
 
 {\small\bibliography{Workflow.bib}}
 
